# stax_takehome

./: CMakeLists.txt  LICENSE  LinkedList.cpp  LinkedList.h  README.md  main.cpp  test.cpp
